# hackaton_mcp

./: claude_desktop_config.json  linkedin_post.txt  nebius_example.py  pyproject.toml
.claude/: settings.local.json
.gradio/flagged/: dataset1.csv
agents/: main_agent.py  system_prompts.yaml
agents/.claude/: settings.local.json
agents/german_class/: gatherer.py  german_conversaton_agent.py  gradio_app.py  requirements.txt  student_data.csv
agents/resume_improver/: .env.example  2_STEP_WORKFLOW_IMPLEMENTATION_COMPLETE.md  ENHANCED_TRACING_IMPLEMENTATION.md  INTERFACE_SIMPLIFICATION_COMPLETE.md  README.md  agent_template.py  bulletproof_fix.py  flux_image_enhancer.py  gradio_app.py  pdf_processor.py  project_continuation.txt  prompts.yaml  requirements.txt  temp_fix_alternative.py  test_enhanced_tracing.py  utils.py
dummy_student_data/: 20250608_Luis_Solito_K2LUG.csv
servers/: base_server.py  german_errors_RAG.py  image_generation.py  server_template.py
servers/emotions_mcp/: MCP_Implementation_Guide.txt  emotion_face_mcp_server.py  emotion_face_mcp_server_v2.py  mcp_config.json
servers/gta_errors/: german_errors_RAG.py  german_errors_db.csv
servers/linkedIn_img/: linkedin_image.py  linkedin_image_v2.py  linkedin_img_v3.py  linkedin_img_v4.py
submissions/emotional_identity_mcp/: README.md  requirements.txt
submissions/german_teacher_Agent_V1/: README.md  app.py  gatherer.py  german_conversaton_agent.py  requirements.txt  (+1 more)
test/: DUCK_SETUP_INSTRUCTIONS.md  README.md  claude_desktop_duck_config.json  duck_detector_mcp.py  test_duck_detector.py
(+10 files in other folders)
