[project]
name = "hackaton-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio[mcp]>=5.32.0",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.14",
    "langfuse>=2.60.7",
    "langgraph>=0.4.7",
]
