[project]
name = "hackaton-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "gradio[mcp]>=5.32.0",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.14",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langfuse>=2.60.7",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.0",
    "openai>=1.84.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.6",
    "pillow>=11.2.1",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
